# WspolnePrzedsiewziecieInzynierskieC3P4

./: .gitignore  README.md  main.py  model5.pt  person_report.csv  person_report.xlsx  requirements.txt
Projekt_Analiza/: pyproject.toml
Projekt_Analiza/Files/: detect_on_new_window.py  detect_on_photo.py  video.py
Projekt_analiza/: pyproject.toml
activitiy/: czynnosci_best.pt  czynnosci_latest.pt  czynnosci_model.pt  video_track.py
activitiy/New_model/: Training_set.csv  VideoZone.py  video_new_model.py
activitiy/src/: classification_keypoint.py  detection_keypoint.py
bstreamer-0.5.1/conf/: server.yaml
bstreamer-0.5.1/video/: Projekt M-Trim.mp4Zone.Identifier  ProjektMBox.mkvZone.Identifier  krakau.mkvZone.Identifier  krakau2.mkvZone.Identifier  krakau3.mkvZone.Identifier  krakau5.mkvZone.Identifier  krakauDupa.mkvZone.Identifier  krakauStragan.mkv  krakauStragan.mkvZone.Identifier  krakauTimelapse.mkvZone.Identifier  tokio.mkvZone.Identifier  tokio2.mkvZone.Identifier
face_detection/: add_to_base.py  compare.py  delete.py  main.py  readme.txt
models/nieuzywane/nie uzywane/: model_artifacts.json
