[tool.poetry]
name = "projekt-analiza"
version = "0.1.0"
description = ""
authors = ["Papcer <kacper.plata321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
ultralytics = "^8.1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
